--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- nav bar part start -->
 
-    <nav class="navbar navbar-expand-lg navbar-expand-md">
+    <nav class="navbar navbar-expand-lg navbar-expand-md menu">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="logo">
@@ -52,19 +52,19 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About us</a>
+                        <a class="nav-link" href="#about-part">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Our Portfolio </a>
+                        <a class="nav-link" href="#portfolio-part">Our Portfolio </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> Testimonial</a>
+                        <a class="nav-link" href="#testimonial-part"> Testimonial</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing Plan</a>
+                        <a class="nav-link" href="#pricing-plan">Pricing Plan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> Contact us</a>
+                        <a class="nav-link" href="#footer-part"> Contact us</a>
                     </li>
 
 
@@ -991,9 +991,17 @@
     <section id="footer-slider-bottom"></section>
     <!--  footer slider bottom part end -->
 
+    <!--  back to top part start -->
+
+    <!--  back to top part end -->
+    <div class="backtotop">
+        <i class="fas fa-arrow-up"></i>
+    </div>
+    
+
     <!--  footer part start -->
 
-    <footer>
+    <footer id="footer-part">
         <div class="footer-logo">
             <img src="images/logo.png" alt="logo">
         </div>
