--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!--  css link end -->
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target=".navbar">
 
     <!-- nav bar part start -->
 
